iterations/01/W-03.txt
In file included from W-03.cpp:1:
W-03.h: In function 'void doWork()':
W-03.h:10:8: warning: comparison of integer expressions of different signedness: 'int' and 'unsigned int' [-Wsign-compare]
   10 |  if (a < b) {
      |      ~~^~~
W-03.h:13:9: error: return-statement with a value, in function returning 'void' [-fpermissive]
   13 |  return 0;
      |         ^
